# NiceNumber

./: .bumpversion.cfg  .flake8  .gitignore  CONTRIBUTING.rst  CONTRIBUTORS.md  LICENSE  README.md  nicenumber.yaml  pyproject.toml
.github/workflows/: build.yml  deploy.yml
docs/: Makefile  Teamwork_Contract.md  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  nicenumber.rst
nicenumber/: __init__.py  nicenumber.py
tests/: test_nicenumber.py
