[tool.poetry]
name = "nicenumber"
version = "0.2.0"
description = "Python package to make numbers nice"
authors = ["Cameron Harris <camharris22@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
